examples/test/testpolicy1837.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1837
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key12: value40
      key17: value45
      key20: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value37
          key9: value25
      podSelector:
        matchLabels:
          key49: value9
          key15: value9
